--- a/app/views/courses/edit.html.haml
+++ b/app/views/courses/edit.html.haml
@@ -1,9 +1,11 @@
 .card
   .card-header
-    %h1 Editing course
+    %h3
+      .far.fa-gradution-cap
+      Editing Course
   .card-body
     = render 'form'
-
-= link_to 'Show', @course
-\|
-= link_to 'Back', courses_path
+  .card-footer
+    = link_to 'Show', @course
+    \|
+    = link_to 'Back', courses_path
