--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -5,10 +5,10 @@
       .col-md-4 
         Copyright
         = Time.now.year 
-        CoursePlatform Shrifall Pvt. Ltd. 
+        CoursePlatform 
         .row 
         .fa.fa-envelope 
-        = mail_to 'rajeevk@shriffal.com'
+        = mail_to 'rajeevk@io.com'
         .row 
       .col-md-4 
         Privacy policy
@@ -17,6 +17,6 @@
       .col-md-4
         About us 
         .row
-        = link_to 'Teach on Shriffal', new_course_path 
+        = link_to 'Teach on Udemy', new_course_path 
 %br
 
