--- a/app/views/courses/new.html.haml
+++ b/app/views/courses/new.html.haml
@@ -1,6 +1,8 @@
 .card
   .card-header
-    %h1 New course
+    %h3
+      .far.fa-gradution-cap
+      New course
   .card-body
     = render 'form'
 
