--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -4,17 +4,18 @@
     .badge.badge-info
       = @users.count
 
-.card-columns
-  - @users.each do |user|
-    = render 'users/user', user: user
-
-=  search_form_for @q do |f| 
-  = f.search_field :email_cont, placeholder: 'email'
-  = f.search_field :sign_in_count_eq, placeholder: 'sign in count'
-  = f.search_field :email_or_sign_in_count_eq, placeholder: 'email or sign in count'
-  = f.submit 
-= link_to users_path, class: 'btn btn-sm  btn-secondary' do  
-  .fa.fa-sync 
+%p 
+/.card-columns
+/  - @users.each do |user|
+/    = render 'users/user', user: user
+.form-inline 
+  =  search_form_for @q do |f| 
+    = f.search_field :email_cont, placeholder: 'email'
+    = f.search_field :sign_in_count_eq, placeholder: 'sign in count'
+    = f.search_field :email_or_sign_in_count_eq, placeholder: 'email or sign in count'
+    = f.submit 
+  .ml-2 
+  = link_to 'refresh', users_path 
 
 %table.table.table-bordered
   %thead 
@@ -27,6 +28,8 @@
       %th= 'last_sign_in_at'.humanize
       %th= 'current_sign_in_ip'.humanize
       %th= 'last_sign_in_ip'.humanize
+      %th Confirmed?
+      %th Roles?
   %tbody
     - @users.each do |user|
       %tr 
@@ -38,4 +41,11 @@
         %td= user.last_sign_in_at 
         %td= user.current_sign_in_ip
         %td= user.last_sign_in_ip 
+        %td= user.confirmed?
+        %td 
+          - user.roles.each do |role|
+            .badge.badge-info 
+              = role.name 
+          - if  policy(user).edit?
+            = link_to 'Edit roles', edit_user_path(user),class: 'btn btn-sm btn-warning'
 
